<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Default App toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/image_folder_list_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="4dp"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="@drawable/ic_logo_a_clean"
        app:title="@string/app_name">
        <ImageButton
            android:id="@+id/filter_options"
            android:layout_width="50dp"
            android:tint="@color/white"
            android:layout_gravity="end"
            android:layout_height="match_parent"
            android:contentDescription="@string/sort_images"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_filter_list"/>
    </androidx.appcompat.widget.Toolbar>

    <!-- Shown when image_folder_list is empty -->
    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:drawableTop="@drawable/ic_portrait"
            android:drawableTint="@color/white"
            android:gravity="center"
            android:text="@string/no_pictures_to_show"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <!-- Shown when ImageFolderList enters in selection mode -->
    <RelativeLayout
        android:id="@+id/toolbar_selection"
        style="@style/AppTheme.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/text_selected_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/hide"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/hide"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/hide_folder"/>
    </RelativeLayout>

    <!-- Shows ImageFolders -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="10dp"
        app:fastScrollEnabled="true"
        app:fastScrollHorizontalThumbDrawable="@drawable/thumb_drawable"
        app:fastScrollHorizontalTrackDrawable="@drawable/line_drawable"
        app:fastScrollVerticalThumbDrawable="@drawable/thumb_drawable"
        app:fastScrollVerticalTrackDrawable="@drawable/line_drawable"
        android:scrollbars="vertical"/>

</LinearLayout>
