<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp">

    <TextView
        android:id="@+id/text_blacklist"
        android:gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:textSize="14sp"
        android:textColor="@color/white"/>

    <ImageButton
        android:contentDescription="@string/reveal_desc"
        android:id="@+id/button_reveal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="15dp"
        android:maxLines="1"
        android:src="@drawable/cross_vector"
        android:background="?android:attr/selectableItemBackground"/>

</LinearLayout>